# telitairos-bot

./: Cargo.toml  LICENSE.txt  readme.md
src/: bot.rs  consts.rs  gpt.rs  lib.rs  main.rs  types.rs
src/bot/: admin.rs  ai.rs  enums.rs  mod.rs
